--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <title>WebLab1</title>
     <link href="css/main.css" rel="stylesheet" type="text/css">
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
-</head>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    </head>
 <body>
+
 <div class="container">
     <div class="header">
         <a>Шайхутдинова Нэля Вилевна P3208</a>
